# dv-portal-vercel

Documents/DV-2027-ETH/: .env.template  .gitignore  .htaccess  .htaccess_new  .htaccess_simple  .vercelignore  ADD_CHILD_ALERT_FIXED.md  ADD_CHILD_FIX.md  CHECK_STATUS_BUTTON_CHANGES.md  CONTACT_FORM_FIXED.md  CONTACT_FORM_TELEGRAM_COMPLETE.md  CPANEL_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DOMAIN_SETUP_GUIDE.md  FAMILY_FORM_IMPLEMENTATION.md  FINAL_FIX_SUMMARY.txt  FORM_RECREATION_COMPLETE.md  HERO_SECTION_FIXED.md  HOMEPAGE_IMPROVEMENTS_COMPLETE.md  ONE_CHILD_AT_A_TIME.md  OPTIONAL_FAMILY_FIX.md  Pipfile  Procfile  QUICK_START_GUIDE.md  README.md  START_HERE.txt  SYSTEM_OVERVIEW.md  TELEGRAM_ADMIN_SETUP.md  TELEGRAM_BOT_README.md  TELEGRAM_BOT_RUNNING.md  USA_HOMEPAGE_REDESIGN.md  VERCEL_NEXT_STEPS.md  apache_anvilu.conf  check_admin.py  check_hosting_options.sh  collect_static.py  complete_fix.py  complete_setup.py  (+104 more)
Documents/DV-2027-ETH/accounts/: forms.py  urls.py  views.py
Documents/DV-2027-ETH/api/: index.py
Documents/DV-2027-ETH/applications/: __init__.py  urls.py
Documents/DV-2027-ETH/applications/migrations/: 0001_initial.py
Documents/DV-2027-ETH/core/: forms.py  gemini_service.py
Documents/DV-2027-ETH/cpanel_deployment/: DEPLOYMENT_INSTRUCTIONS.txt  manage.py  requirements.txt
Documents/DV-2027-ETH/cpanel_deployment/applications/: admin.py  forms.py  models.py  views.py
Documents/DV-2027-ETH/cpanel_deployment/core/: admin.py  models.py  urls.py  views.py
Documents/DV-2027-ETH/cpanel_deployment/dv_portal/: __init__.py  settings.py  settings_production.py  settings_simple.py  urls.py
Documents/DV-2027-ETH/cpanel_deployment/notifications/: admin.py  urls.py
Documents/DV-2027-ETH/dv_portal/: asgi.py  settings_vercel.py  wsgi.py
Documents/DV-2027-ETH/notifications/: models.py  telegram_bot.py  views.py
Documents/DV-2027-ETH/payments/: admin.py  models.py  urls.py  views.py
(+34 files in other folders)
